style bug squash

--- a/styles/nav.scss
+++ b/styles/nav.scss
@@ -99,6 +99,8 @@ nav {
 }
 
 .desktop {
+    display: none;
+
     & .links {
         flex-direction: row;
 
@@ -110,7 +112,7 @@ nav {
         }
     }
 
-    @media screen and (max-width: 510px) {
-        display: none;
+    @media screen and (min-width: 510px) {
+        display: block;
     }
 }
